# CrystalPol

./: .gitignore  .pre-commit-config.yaml  DC-MBI-3x3x3.gjf  Pipfile  README.md  config.example.yml  crystal.example.gjf  crystal.xyz  pyproject.toml
.github/workflows/: python-pypi-test-upload.yml  python-pypi-upload.yml  python-tests.yml
crystalpol/: __main__.py  gaussian.py  polarization.py
crystalpol/shared/config/: config.py
crystalpol/shared/system/: atom.py  crystal.py  molecule.py
crystalpol/shared/utils/: __init__.py  log.py  ptable.py
tests/: test_gaussian.py  test_polarization.py
tests/shared/: test_gaussian.py
tests/shared/config/: test_config.py
tests/shared/system/: test_atom.py  test_crystal.py  test_molecule.py
tests/shared/utils/: test_log.py
